Some changes on loader, Makefiles updates

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,5 +1,8 @@
 # vim: syntax=make:
 CFLAGS +=-pipe
+
+.PHONY: clean echo-deps ctags all
+
 all: $(targets)
 
 .deps/%.dep: %.c
@@ -11,11 +14,21 @@ all: $(targets)
 deps = $(foreach o,$(targets:=_obj),$($(o):%.o=.deps/%.dep))
 -include $(deps)
 
+define target_template
+$(1): $$($(1)_obj)
+all_objs += $$($(1)_obj)
+endef
+
+$(foreach prog,$(targets),$(eval $(call target_template,$(prog))))
+
+$(targets):
+	$(LINK.o) $^ -o $@
+
 echo-deps:
 	@echo $(deps)
 
 clean:
-	rm -f *.o .deps/*.dep $(targets)
+	rm -f $(all_objs) .deps/*.dep $(targets) gmon.out
 
 ctags:
 	@ctags *.c *.h
