--- a/vm/Makefile
+++ b/vm/Makefile
@@ -1,5 +1,5 @@
-CFLAGS += -Wall -g3 -DCOMPUTED_GOTO -pg
-LDFLAGS += -pg -pthread
+CFLAGS += -Wall -g3 -DCOMPUTED_GOTO
+LDFLAGS += -pthread
 
 vm_obj = vm.o heap.o native.o primitives.o hash.o module.o fixnum.o vector.o string.o
 targets = vm
