--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ clean:
 install: build install-stamp
 install-stamp:
 	dh install --before dh_auto_install
-	make install DESTDIR=debian/lgears PREFIX=/usr
+	make install DESTDIR=`pwd`/debian/lgears PREFIX=/usr
 	dh install --after dh_auto_install
 	touch install-stamp
 
