--- a/vm/Makefile
+++ b/vm/Makefile
@@ -1,8 +1,9 @@
 CFLAGS += -Wall -g3
-LDFLAGS += -pthread
+LDFLAGS += -pthread -lffi -ldl
 
 vm_obj = vm.o heap.o native.o primitives.o hash.o \
-		 module.o string.o fd.o bytevector.o struct.o fs.o
+		 module.o string.o fd.o bytevector.o struct.o \
+		fs.o ffi.o const_allocator.o types.o
 programs = vm
 
 ifdef JARI
