--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,15 @@ project(lgears)
 cmake_minimum_required(VERSION 2.6)
 
 include(FindThreads)
+include(FindPkgConfig)
 
 option(FATAL_SAFE_ASSERT "Die when safe assertion failed" ON)
 option(DEBUG_TRACE_OPCODE "Trace opcode" OFF)
 option(COMPUTED_GOTO "Use 'threaded' code" ON)
 option(CHECK_OPSTACK "Check operand stack for overflow" ON)
+
+pkg_check_modules(LIBFFI libffi)
+
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
 
 add_definitions(-Wall)
