--- a/vm/Makefile
+++ b/vm/Makefile
@@ -1,9 +1,9 @@
 CFLAGS += -Wall -g3
-LDFLAGS += -pthread -lffi -ldl
+LDFLAGS += -pthread
 
 vm_obj = vm.o heap.o native.o primitives.o hash.o \
 		 module.o strings.o fd.o bytevector.o struct.o \
-		fs.o foreign.o const_allocator.o types.o
+		fs.o const_allocator.o types.o
 programs = vm
 
 ifdef JARI
@@ -13,6 +13,10 @@ ifdef JARI
 	LDFLAGS = -nostdlib -Wl,-z,combreloc,-T,$(JARI_LIBDIR)/lib/ejo.ld \
 		-Wl,-static,-e,__entry_point
 	LIBS = -L$(JARI_LIBDIR)/lib -lpthread -lsys -lc
+else
+	vm_obj += foreign.o
+	CFLAGS += -DHAVE_LIBFFI
+	LDFLAGS += -lffi -ldl
 endif
 
 include include.mk
