Delete builtin posix support, allocate old space on demand
Builtin posix layer removed because it's a bad idea to hardcode os layer
inside VM, in any case, ffi will cover it in future.

--- a/vm/Makefile
+++ b/vm/Makefile
@@ -4,7 +4,7 @@ LDFLAGS += -pthread
 
 vm_obj = vm.o heap.o native.o primitives.o hash.o \
 		 module.o strings.o bytevector.o struct.o \
-		posix.o const_allocator.o types.o
+		const_allocator.o types.o
 
 .PHONY: all clean
 all: vm
